--- a/react-app/src/components/Distilleries/Distilleries.module.css
+++ b/react-app/src/components/Distilleries/Distilleries.module.css
@@ -1,5 +1,5 @@
 .checkinModalButton {
-    height: 40px;
+    max-height: 40px;
     border-radius: 4px;
     font-size: 16px;
     background: transparent;
@@ -24,6 +24,6 @@
     flex-direction: column;
     align-items: center;
     max-width: 100%;
-    padding: 80px;
+    padding: 0 0 80px 0;
     background-color: #404040;
 }
